--- a/portafolioapp/templates/layout.html
+++ b/portafolioapp/templates/layout.html
@@ -18,6 +18,9 @@
 
         {% endblock %}
     </div>
+    
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 <footer>
     <div class="container p-4 text-center">
