--- a/portafolioapp/templates/home.html
+++ b/portafolioapp/templates/home.html
@@ -28,24 +28,21 @@
 
     <h3>Mis proyectos</h3>
     <p>Estos son algunos de los trabajos que he desarrollado.</p>
+</div>
+<div clas="container mx-auto">
     {% for project in projects %}
 
-    <div class="col-4 md-4 p-4">
-        <div class="card bg-black card-project">
-            <img src="{{project.imagen.url}}" alt="{{project.titulo}}" class="card-img-top">
-            <div class="card-body">
-                <h2>{{project.titulo}}</h2>
-                <p>{{project.descripcion}}</p>
-
-        
-                {% if project.url %}
-        
-                    <a href="{{project.url}}" class="btn btn-light rounded-0 btn-sm" target="_blank">{{project.url}}</a>
-        
-                {% endif %}
-            </div>
+    <div class="card-section m-4 border rounded p-3">
+    <div class="card bg-black text-center">
+        <img src="{{project.imagen.url}}" class="card-img-top" alt="{{project.titulo}}">
+        <div class="card-body text-center">
+            <h5 class="card-title">{{project.titulo}}</h5>
+            <p class="card-text">{{project.descripcion}}</p>
         </div>
-
+        {% if project.url %}
+            <a href="{{project.url}}" class="btn btn-dark rounded-0 btn-sm" target="_blank">{{project.url}}</a>
+        {% endif %}
+    </div>
     </div>
 
     {% endfor %}
