--- a/portafolioapp/templates/partials/navbar.html
+++ b/portafolioapp/templates/partials/navbar.html
@@ -11,9 +11,9 @@
             <a class="nav-link" href="{% url 'contacto:contacto' %}">Contacto</a>
           </li>
           <li class="nav-item d-flex align-items-center">
-            <a class="btn btn-primary btn-sm" href="{% static 'portafolio/JuanCandal.pdf' %}" target="_blank">Descargar CV</a>
+            <a class="btn btn-dark btn-sm" href="{% static 'portafolio/JuanCandal.pdf' %}" target="_blank">Descargar CV</a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
+</nav>
